OGM, reemplazando ranking_municipal.html => municipal-triangle

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -314,7 +314,7 @@
                         </h5>
                         <hr class="pma-line-3"/>
                         {% if municipio|lower != 'managua' %}
-                            {% include 'ranking_municipio.html' %}
+                            {% include 'municipal-triangle.html' %}
                         {% endif %}
                     </div>
                     {% if municipio|lower != 'managua' %}
