--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -240,7 +240,7 @@
         <div class="loaded">
             <div class="container">
                 <div class="row">
-                    <div class="{% if municipio|lower == 'managua' %} col-lg-12 col-md-12 col-sm-12 {% else %} col-lg-6 col-md-6 col-sm-12 {% endif %}">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
                         <h2>
                             <strong>Ranking de municipio</strong>
                             de misma categor&iacute;a municipal
@@ -261,17 +261,9 @@
                         </h4>
                         <hr class="pma-line-3"/>
                         {% if municipio|lower != 'managua' %}
-                            {% include 'ranking_municipio.html' %}
+                            {% include 'municipal-triangle.html' %}
                         {% endif %}
-
                     </div>
-                    {% if municipio|lower != 'managua' %}
-                        {# chart horizontal chart #}
-                        <div class="col-lg-6 col-md-6 col-sm-12 mt-1 height-horizontal-bar">
-                            <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
-                            </div>
-                        </div>
-                    {% endif %}
                 </div>
             </div>
 
