--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -23,23 +23,13 @@ h5 {
     line-height: 1.2;
 }
 h4 { margin: 0.2em 0 0.5em; }
-h1 {
-    margin-top: 0;
-    font-size: 2.074em;
-}
-h2 {
-    font-size: 1.428em;
-}
-h3 {
-    font-size: 1.34em;
-}
-h4 {
-    font-size: 1.2em;
-}
+h1 { margin-top: 0; font-size: 2.074em;}
+h2 {font-size: 1.428em;}
+h3 {font-size: 1.34em;}
+h4 {font-size: 1.2em;}
 h2 a { color: #333;}
 .font_small { font-size: 13px;}
-small,
-.class="pma-line-4"font_small {
+small, .pma-line-4 .font_small {
     font-size: 0.833em;
 }
 .pma-number,
@@ -79,7 +69,6 @@ table td {
     font-weight: bold !important;
     text-transform: uppercase !important;
     font-size: 14px !important;
-    font-weight: bold !important;
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
     border-radius: 25px;
@@ -238,7 +227,7 @@ footer .copyright {
     padding: 14px;
     position: absolute;
     top: 20px;
-    right: 0px;
+    right: 0;
     color: #fff;
     font-weight: bold;
 }
@@ -369,7 +358,7 @@ footer .copyright {
     margin-top: 12px;
 }
 .pma-index-inversion-icons h5{
-    margin-top: 0px;
+    margin-top: 0;
 }
 .chart-update .pma-icon {
     cursor: pointer;
@@ -396,8 +385,8 @@ footer .copyright {
 .proyectos fieldset p label, .proyectos .actions { width: 100%; }
 .blanco { color: #fff;}
 .blanco:hover, .amarillo:hover, .blanco:focus, .amarillo:focus { color: yellow;text-decoration: none;}
-.categorias_inversion .well { background: none; border:0px;}
-.otras-categorias { margin: 30px 0px; }
+.categorias_inversion .well { background: none; border:0;}
+.otras-categorias { margin: 30px 0; }
 .amarillo { color: yellow; }
 .pma-search-bar { padding: 10px;}
 .pma-search-bar select:focus {
@@ -406,7 +395,9 @@ footer .copyright {
 .pma-search-bar select {
     background: none;
     border: transparent;
-    font-size: 20px;
+    font-size: 17px;
+    text-indent: 0.01px;
+    -moz-appearance: none;/*hidde the arrow from dropdown in select*/
 }
 .pma-search-bar .municipio {
     width: 95%;
@@ -418,9 +409,8 @@ footer .copyright {
     background-color: #1a8cb3;
     outline: none;
 }
-.cd-horizontal-timeline .events-content { margin: 0px !important;}
+.cd-horizontal-timeline .events-content { margin: 0 !important;}
 .ver-mas {
-    cursor: pointer;
     cursor: pointer;
     border-radius: 50%;
     border: 2px solid #5EDAB8;
@@ -538,7 +528,6 @@ footer .copyright {
 #indicator, #year {
     float: left;
     width: 100%;
-    padding-left: 5px;
     background: url('/static/img/new_arrow_trans.png') no-repeat right transparent;
     font-size: 14px;
     line-height: 1.5em;
@@ -570,7 +559,7 @@ footer .copyright {
     border-style: solid;
     border-width: 5px 4px 0 4px;
     height: 0;
-    right: 0%;
+    right: 0;
     margin-left: -4px;
     margin-top: 10px;
     position: absolute;
