Mostrando 'Presupuestos Municipales' en una linea

--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -52,8 +52,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="{% url 'home' %}">
-                    <span id="brand-01">Presupuestos</span>
-                    <span id="brand-02">Municipales </span>
+                    <span id="brand-01">Presupuestos Municipales</span>
                     <span id="brand-03">Abiertos </span>
                 </a>
             </div>
