--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -254,6 +254,7 @@
             $('.select2-search--dropdown .select2-search__field').attr('placeholder', null);
         });
         lista_indicadores.on('select2:open', function () {
+            $('.select2-dropdown').addClass('select2-dropdown-width');
             $('.select2-search--dropdown .select2-search__field').attr('placeholder', 'Escribir el Indicador');
         });
         lista_indicadores.on('select2:close', function () {
