validando que si existe clasificacion del municipio aparezca en el grafico de poligono

--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -5,6 +5,10 @@
         <div class="square">
             <span class="name">
                 Ranking Municipal
+                <br>
+                {% if mi_clase.clasificacion %}
+                    Grupo "{{ mi_clase.clasificacion }}"
+                {% endif %}
             </span>
         </div>
     </div>
