--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -495,6 +495,7 @@ footer .copyright {
 .select2-container { width: 100% !important;}
 .select2-container--default .select2-selection--single .select2-selection__arrow b { border-color: #fff transparent transparent transparent !important;}
 .select2-dropdown-width { width: 300px !important; }
+.select2-dropdown-middle_width { width: 210px !important; }
 .nav .open > a, .nav .open > a:focus, .nav .open > a:hover {background-color: #107ca7; border-color: #337ab7;border-radius: 0px !important;}
 .select2-container--default .select2-selection--single .select2-selection__rendered { color: inherit; text-transform: uppercase;}
 
