--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -242,6 +242,7 @@
             });
         });
         lista_municipios.on('select2:open', function () {
+            $('.select2-dropdown').addClass('select2-dropdown-middle_width');
             $('.select2-search--dropdown .select2-search__field').attr('placeholder', 'Escribir el municipio');
         });
         lista_municipios.on('select2:close', function () {
