--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -32,7 +32,7 @@
                                 </div>
                             {% endif %}
                             <div class="col-xs-4 col-sm-2 col-md-1">
-                                <span class="pma-fg-light-green titsearch years"><strong>A&ncaron;</strong></span>
+                                <span class="pma-fg-light-green titsearch years"><strong>A&ncaron;o</strong></span>
                                 <select name="year" id="year">
                                     {% for ayear in year_list %}
                                         <option {% if ayear == year|add:"0" %}selected{% endif %}
