--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -3,6 +3,9 @@
 {% load humanize %}
 {% load core_extras %}
 {% load mathfilters %}
+{% block indicator_subtitle %}
+    Inversi&oacute;n
+{% endblock %}
 
 {% block charts %}
     <div class="col-lg-12 col-md-12 col-sm-12">
@@ -82,7 +85,7 @@
                             <table class="table table-bordered table-striped table-hover">
                                 <thead>
                                 <tr class="bg-primary">
-                                    <th rowspan="2" colspan="1">Clasificaci&oacute;n</th>
+                                    <th rowspan="2" colspan="1">Grupo</th>
                                     {% if periodo_list|keyvalue:year == 'I' %}
                                         <th rowspan="1" colspan="2" class="text-center no-border-bottom">Inicial</th>
                                     {% else %}
