cambiando categoria por grupo

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -70,7 +70,7 @@
                                     </span>
                                 <div class="info-box-content">
                                         <span class="info-box-number font-17px">
-                                            <strong>Categor&iacute;a de municipio {{ mi_clase.clasificacion }}</strong>
+                                            <strong>Grupo de municipio {{ mi_clase.clasificacion }}</strong>
                                         </span>
                                 </div>
                             </div>
