--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -212,36 +212,7 @@
                         </h5>
                         <hr class="pma-line-3"/>
                     </div>
-                    {# chart horizontal chart #}
-                    <div class="col-lg-6 col-md-6 col-sm-12 mt-1 height-horizontal-bar">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="events-content container text-center">
-                <ol>
-                    {% for row in porclasep %}
-                        <li{% if forloop.first %} class="selected"{% endif %}
-                                                  data-date="{% now "SHORT_DATETIME_FORMAT" %} 00:{{ forloop.counter }}">
-                            <!--
-           <h4>{{ row.clasificacion }}</h4>
-        -->
-                        </li>
-                    {% endfor %}
-                </ol>
-            </div> <!-- .events-content -->
-            <div class="row">
-                <div class="col-md-12 medium text-center">
-                    <button id="show-detail-1" class="blanco btn pma-bg-blue more" type="submit">
-                        Ver detalles en tabla
-                    </button>
-                </div>
-            </div>
-            <div class="container" id="detail-1">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 table-responsive">
+                    <div class="col-lg-5 col-md-5 col-sm-12 table-responsive">
                         <table class="table table-bordered table-condensed pma-bg-white">
                             <thead>
                             <tr class="bg-primary">
@@ -287,8 +258,26 @@
                             </tfoot>
                         </table>
                     </div>
+                    {# chart horizontal chart #}
+                    <div class="col-lg-7 col-md-7 col-sm-12 mt-1 height-horizontal-bar">
+                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <div class="events-content container text-center">
+                <ol>
+                    {% for row in porclasep %}
+                        <li{% if forloop.first %} class="selected"{% endif %}
+                                                  data-date="{% now "SHORT_DATETIME_FORMAT" %} 00:{{ forloop.counter }}">
+                            <!--
+           <h4>{{ row.clasificacion }}</h4>
+        -->
+                        </li>
+                    {% endfor %}
+                </ol>
+            </div> <!-- .events-content -->
         {% else %}
             <div class="container">
                 <div class="row">
