agregando grafico de columnas horizontal para categorias municipales

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -259,7 +259,7 @@
                         </table>
                     </div>
                     {# chart horizontal chart #}
-                    <div class="col-lg-7 col-md-7 col-sm-12 mt-1 height-horizontal-bar">
+                    <div class="col-lg-7 col-md-7 col-sm-12">
                         <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
                         </div>
                     </div>
