--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -281,7 +281,7 @@
         {% else %}
             <div class="container">
                 <div class="row">
-                    <div class="{% if municipio|lower == 'managua' %} col-lg-12 col-md-12 col-sm-12 {% else %} col-lg-6 col-md-6 col-sm-12 {% endif %}">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
                         <h2>
                             <strong>Rankin de gastos de personal percápita {{ year }}</strong>
                             Municipio de <strong>{{ municipio }}</strong> grupo
@@ -306,13 +306,6 @@
                             {% include 'municipal-triangle.html' %}
                         {% endif %}
                     </div>
-                    {% if municipio|lower != 'managua' %}
-                        {# chart horizontal chart #}
-                        <div class="col-lg-6 col-md-6 col-sm-12 mt-1 height-horizontal-bar">
-                            <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
-                            </div>
-                        </div>
-                    {% endif %}
                 </div>
             </div>
 
@@ -356,6 +349,7 @@
                                         <th class="text-center"><strong>Ejecuci&oacute;n</strong></th></tr>
                                     {% endif %}
                                 </thead>
+                                <tbody>
                                 {% if ejecutado <= 0 %}
                                     {% for row in otros|dictsortreversed:"asignado_percent" %}
                                         {% if municipio.slug == row.gasto__municipio__slug %}
@@ -388,6 +382,7 @@
                                     {% endif %}
                                     </tr>
                                     {% endfor %} {% endif %}
+                                </tbody>
                                 {% comment %}
                             <tr class="">
                                 <td colspan="2">TOTAL</td>
