--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -2,40 +2,73 @@
 {% load static thumbnail chartit humanize %}
 {% load mathfilters %}
 {% load core_extras %}
+{% block indicator_subtitle %}
+    Gasto de Personal
+{% endblock %}
 
 {% block indicator_description %}
     {{ indicator_description }}
 {% endblock %}
 
 {% block main_table %}
+<div class="col-md-5">
+    <h4>Rubros de gastos de personal para el per&iacute;odo {{ year }}
+    {% if periodo_list|keyvalue:year == 'F' %}
+        cierre
+    {% elif periodo_list|keyvalue:year == 'A' %}
+        intermedio
+    {% elif periodo_list|keyvalue:year == 'I' %}
+        inicial
+    {% endif %}
+    </h4>
+    <h5>
+    {% if periodo_list|keyvalue:year == 'F' %}
+        Ejecuci&oacute;n de gastos de personal
+    {% elif periodo_list|keyvalue:year == 'A' %}
+        Ejecuci&oacute;n intermedia de gastos de personal
+    {% elif periodo_list|keyvalue:year == 'I' %}
+        Presupuesto inicial de gastos de personal
+    {% endif %}
+    {{ year }}
+    por su destino {% descargar_excel "gp1" %}</h5>
+
     <table class="table table-striped table-hover" id="datatable-1">
         <thead>
         <tr class="bg-primary">
-            <th class="text-left">Rubros de Gasto</th>
-            <th class="text-right">Inicial</th>
-            <th class="text-right">Ejecutado</th>
-            <th class="text-right">Porcentaje</th>
+            <th class="text-left">Rubros de Gasto de Personal</th>
+	    {% if periodo_list|keyvalue:year == 'I' %}
+              <th class="text-right">Inicial</th>
+	    {% else %}
+              <th class="text-right">Ejecutado</th>
+	    {% endif %}
+	    <th class="text-right">%</th>
         </tr>
         </thead>
         <tbody>
         {% for row in rubros %}
             <tr>
                 <td>{% firstof row.tipogasto__nombre row.subtipogasto__nombre %}</td>
-                <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-                <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
-                {% if row.inicial_asignado %}
-                    <td class="text-right">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:1 }}%</td>
+		{% if periodo_list|keyvalue:year == 'I' %}
+                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                    <td class="text-right">{{ row.inicial_asignado|div:asignado|mul:100|floatformat:1 }}%</td>
+		{% else %}
+                    <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
+                    <td class="text-right">{{ row.ejecutado|div:ejecutado|mul:100|floatformat:1 }}%</td>
                 {% endif %}
             </tr>
         {% endfor %}
         </tbody>
         <tr class="">
             <td>TOTAL</td>
-            <td class="text-right">{{ asignado|million|intcomma }}</td>
-            <td class="text-right">{{ ejecutado|million|intcomma }}</td>
-            <td class="text-right">{% if asignado %}{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%{% endif %}</td>
+	    {% if periodo_list|keyvalue:year == 'I' %}
+                <td class="text-right">{{ asignado|million|intcomma }}</td>
+	    {% else %}
+              <td class="text-right">{{ ejecutado|million|intcomma }}</td>
+	    {% endif %}
+	    <td></td>
         </tr>
     </table>
+</div>
 {% endblock %}
 
 {% block section2 %}
@@ -45,12 +78,8 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         {% if municipio %}
-                            <h2><strong>Ranquin de municipio </strong>de misma categoría municipal </h2>
-                            <h4> Porcentaje del gasto total destinado a gastos de funcionamiento
-                                "{{ mi_clase.clasificacion }}"</h4>
-                        {% else %}
-                            <h2>Porcentaje destinado a gastos de funcionamiento</h2>
-                            <h4>por categoría de Municipios</h4>
+			<h2><strong>Rankin de gastos de personal percápita {{ year }} </strong>
+				Municipio de {{ municipio }} grupo "{{ mi_clase.clasificacion }}" </h2>
                         {% endif %}
                         <hr class="pma-line-3"/>
                     </div>
@@ -135,21 +164,23 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <h2><strong>{{ indicator_name }} </strong> <br>
-                            por categoría de Municipios</h2>
-                        <hr class="pma-line-3"/>
+			    <h2><strong>Porcentaje destinado a gastos de personal, presupuesto
+                            {% if periodo_list|keyvalue:year == 'F' %}
+                                de cierre
+                            {% elif periodo_list|keyvalue:year == 'A' %}
+                                intermedio
+                            {% elif periodo_list|keyvalue:year == 'I' %}
+                                inicial
+                            {% endif %}
+			    {{ year }}</strong><br />
+		            por grupos de municipios </h2>
+                            <hr class="pma-line-3"/>
                     </div>
                     <div class="col-lg-5 col-md-5 table-responsive">
                         <table class="table table-bordered">
                             <thead>
-                            <tr>
-                                <th colspan="3" rowspan="1">
-                                    <h5 class="">Porcentaje del gasto total destinado
-                                        a {{ indicator_name }}</h5>
-                                </th>
-                            </tr>
                             <tr class="bg-primary">
-                                <th class="text-center">Categoría</th>
+                                <th class="text-center">Grupo</th>
                                 <th class="text-center">P. Inicial</th>
                                 <th class="text-center">Ejecutado</th>
                             </tr>
@@ -162,8 +193,11 @@
                                         {% if row.asignado %}{{ row.asignado|floatformat:2 }}%{% else %}
                                             0% {% endif %}</td>
                                     <td class="text-right">
-                                        {% if row.ejecutado %}{{ row.ejecutado|floatformat:2 }}% {% else %}
-                                            0% {% endif %}</td>
+                                        {% if periodo_list|keyvalue:year == 'I' %}
+					    {{ row.ejecutado|floatformat:2|default:0 }}% 
+					{% else %}
+                                            0 
+					{% endif %}</td>
                                 </tr>
                             {% endfor %}
                             <tr>
@@ -171,7 +205,7 @@
                                 <td class="text-right">
                                     <strong>{{ porclasep|total_avg:'asignado'|floatformat:2 }}%</strong></td>
                                 <td class="text-right">
-                                    <strong>{{ porclasep|total_avg:'ejecutado'|floatformat:2 }}%</strong></td>
+					{% if periodo_list|keyvalue:year != 'I' %}<strong>{{ porclasep|total_avg:'ejecutado'|floatformat:2 }}%</strong>{% endif %}</td>
                             </tr>
                             </tbody>
                             <tfoot class="font-12px font-color-azul">
@@ -207,7 +241,8 @@
         <div class="row">
             <div class="col-md-12">
                 <h2><strong>Información Histórica</strong><br>
-                    Ejecución presupuestaria del gasto de funcionamiento</h2>
+                    Ejecución presupuestaria del gasto de personal</h2>
+		<h3>{{ municipio }}</h3>
                 <hr class="pma-line-3"/>
             </div>
         </div>
@@ -300,8 +335,9 @@
     <div class="container wide">
         <div class="row">
             <div class="col-md-12">
-                <h2><strong>Modificaciones al presupuesto </strong>municipal</h2>
-                <h4>{{ indicator_name }} - Millones de córdobas corrientes </h4>
+                <h2><strong>{{ indicator_name }} </strong>{{ municipio }} {{ year }}</h2>
+                <h4>Presupuesto inicial, intermedio, de cierre y su modificación por rubro</h4>
+		<h5>Millones de córdobas corrientes </h5>
                 <hr class="pma-line-3"/>
             </div>
         </div>
